--- a/Main.css
+++ b/Main.css
@@ -15,18 +15,14 @@ body{
 
     border: 2px solid #73AD21;
 }
-.log{
-    display: grid;
-    grid-template-columns: 2.5fr 1fr;
-    float: right;
-    margin-top: 20px;
-}
+/* .log{
+    display: flex;
+    justify-content: flex-end;
+} */
 .list{
     display: grid;
     grid-template-columns: 1fr 1fr 150px 1fr 1fr;
     margin-top: 100px;
-    
-    
     align-content: center;
 }
 h1{
@@ -35,4 +31,20 @@ h1{
 }
 .news{
     display: grid;
+
 }
+.first{
+    display: grid;
+    grid-template-columns: 1fr minmax(auto, auto) 1fr;
+
+}
+
+.log{
+    display: flex;
+    column-gap: 4em;
+    justify-content: flex-end;
+    align-items: center;
+    
+}
+
+
